tests: Add tests uploading and downloading files
* Add in the backend URL to ignore the request body
* Add directory with files to test the file download
* disable benchmark by default

Signed-off-by: Alvaro Cano <alvaro.cano@zevenet.com>

--- a/tests/functional/tests/001_http_farm/test.in
+++ b/tests/functional/tests/001_http_farm/test.in
@@ -21,4 +21,16 @@ CMD=benchmark
 CL=1
 METHOD="GET"
 URL="/"
-
+#########################
+DESCRIPTION="Upload a file"
+CMD=curl
+CL=1
+METHOD=POST
+URL=/echo
+FILE=file.txt
+#########################
+DESCRIPTION="Download a file"
+CMD=curl
+CL=1
+METHOD=GET
+URL=/download/file.txt
