--- a/tests/functional/tpl/nginx-sites.conf
+++ b/tests/functional/tpl/nginx-sites.conf
@@ -16,11 +16,18 @@ server {
 	server_name bck-#{BCK_ID};
 	add_header Backend $server_name;
 	more_clear_headers 'Date:*';
+	more_clear_headers 'ETag:*';
+	more_clear_headers 'Last-Modified:*';
 
 
 # GET, POST: /
 	location / {
 		echo "Default response of the backend #{BCK_ID}";
+	}
+
+# GET: /download
+	location ~ /download/ {
+		try_files $uri $uri/ /index.php$is_args$args;
 	}
 
 # GET: /client-ip
