tests: Add new commands for tests
* wait: it waits N seconds
* killbg: it kills a process in background that was prevously executed by the tests
* ctl: it applies an action in the zproxy API
* reload: it reloads the zproxy configuration file
* wrk: it executes the wrk command

Signed-off-by: Alvaro Cano <alvaro.cano@zevenet.com>

--- a/tests/functional/tests/003_bck_maintenance/test.in
+++ b/tests/functional/tests/003_bck_maintenance/test.in
@@ -1,6 +1,10 @@
+CMD=ctl
+METHOD="PATCH"
+BODY=ctl.json
+URL="/listener/0/service/0/backend/0/status"
+#################
 CMD=average
 CL=1
 REQUESTS=4
 METHOD="GET"
 URL="/"
-
