cmake: disable the extended debug logs by default and the code tests
Signed-off-by: Alvaro Cano <alvaro.cano@zevenet.com>

	modificado:     CMakeLists.txt
	modificado:     src/CMakeLists.txt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,7 +38,7 @@ SET(MAINFOLDER ${PROJECT_SOURCE_DIR})
 #options
 
 option(BUILD_DOC "Build Documentation" OFF)
-option(BUILD_TESTS "Build tests" ON)
+option(BUILD_TESTS "Build tests" OFF)
 option(UNIQUE_BUILD_DIRECTORY "enable build directory" ON)
 option(BUNDLED_OPENSSL "Use Bundled Openssl (build latest version)" OFF)
 option(BUNDLED_ZLIB "Use Bundled ZLIB (build latest version)" OFF)
