--- a/tests/functional/tests/009_waf/test.in
+++ b/tests/functional/tests/009_waf/test.in
@@ -21,3 +21,13 @@ CL=1
 METHOD="GET"
 URL="/deny"
 SSL=1
+########################
+CMD=reload
+FILE="zproxy_def_err.cfg"
+#########################
+DESCRIPTION="This has to be rejected"
+CMD=curl
+CL=1
+METHOD="GET"
+URL="/deny"
+SSL=1
