--- a/tests/functional/tests/002_https_farm/test.in
+++ b/tests/functional/tests/002_https_farm/test.in
@@ -24,6 +24,11 @@ BODY=file_short.txt
 HEADERS="Content-Type: text/plain"
 SSL=1
 #########################
+DESCRIPTION="Get stats to check counters"
+CMD=ctl
+URL="/listener/0"
+METHOD="GET"
+#########################
 CMD=benchmark
 CL=1
 METHOD="GET"
