--- a/tests/functional/tests/003_bck_maintenance/test.in
+++ b/tests/functional/tests/003_bck_maintenance/test.in
@@ -8,3 +8,8 @@ CL=1
 REQUESTS=4
 METHOD="GET"
 URL="/"
+#########################
+DESCRIPTION="Get stats to check counters"
+CMD=ctl
+URL="/listener/0"
+METHOD="GET"
