--- a/tests/functional/tests/005_service_match/test.in
+++ b/tests/functional/tests/005_service_match/test.in
@@ -14,3 +14,8 @@ CL=1
 METHOD="GET"
 URL="/"
 VHOST="svc.zproxy"
+#########################
+DESCRIPTION="Get stats to check counters"
+CMD=ctl
+URL="/listener/0"
+METHOD="GET"
