--- a/tests/functional/tests/006_https_bck/test.in
+++ b/tests/functional/tests/006_https_bck/test.in
@@ -7,3 +7,8 @@ CMD=curl
 CL=1
 METHOD="GET"
 URL="/bck-non-https"
+#########################
+DESCRIPTION="Get stats to check counters"
+CMD=ctl
+URL="/listener/0"
+METHOD="GET"
