--- a/tests/functional/tests/007_timeouts/test.in
+++ b/tests/functional/tests/007_timeouts/test.in
@@ -2,3 +2,8 @@ CMD=curl
 CL=1
 METHOD="GET"
 URL="/sleep-response/7"
+#########################
+DESCRIPTION="Get stats to check counters"
+CMD=ctl
+URL="/listener/0"
+METHOD="GET"
