--- a/tests/functional/tests/009_waf/test.in
+++ b/tests/functional/tests/009_waf/test.in
@@ -21,6 +21,11 @@ CL=1
 METHOD="GET"
 URL="/deny"
 SSL=1
+#########################
+DESCRIPTION="Get stats to check counters"
+CMD=ctl
+URL="/listener/0"
+METHOD="GET"
 ########################
 CMD=reload
 FILE="zproxy_def_err.cfg"
