--- a/tests/functional/tests/010_weight_algo/test.in
+++ b/tests/functional/tests/010_weight_algo/test.in
@@ -3,3 +3,8 @@ CL=1
 REQUESTS=12
 METHOD="GET"
 URL="/"
+#########################
+DESCRIPTION="Get stats to check counters"
+CMD=ctl
+URL="/listener/0"
+METHOD="GET"
