tests: update the tests with the new paraeter "pending connection"
Signed-off-by: Alvaro Cano <alvaro.cano@zevenet.com>

--- a/tests/functional/tests/008_stats_connlimit/test.in
+++ b/tests/functional/tests/008_stats_connlimit/test.in
@@ -26,3 +26,11 @@ METHOD="GET"
 ############
 CMD=killwrk
 JOB=1
+############
+DESCRIPTION="wait for all counter will be reseted"
+CMD=wait
+TIMEOUT=3
+############
+CMD=ctl
+URL="/listener/0"
+METHOD="GET"
