--- a/usr/local/zevenet/share/global.conf.template
+++ b/usr/local/zevenet/share/global.conf.template
@@ -485,7 +485,7 @@ $keygen_cmd="ssh-keygen -t rsa -f $key_path/$key_id -N '' -q";#update
 $zenbackup="$zbindir/zenbackup.pl";#update
 
 #Do backup to
-$backupfor="$configdir $basedir/*.pem $confhttp $rttables $sshConf $snmpdconfig_file $keepalived_conf $conntrackd_conf /etc/hostname $filedns /etc/cron.d/ $applianceVersionFile";#update
+$backupfor="$configdir $basedir/*.pem $confhttp $rttables $sshConf $snmpdconfig_file $keepalived_conf $conntrackd_conf /etc/hostname $filedns /etc/cron.d/ $applianceVersionFile /etc/ssl/openssl.cnf";#update
 
 #Bonding interfaces
 $bond_config_file="$configdir/bonding.conf";#update
