--- a/tests/functional/tpl/variables.ini
+++ b/tests/functional/tpl/variables.ini
@@ -36,6 +36,7 @@ NGINX_MODULE_ECHO="/usr/lib/nginx/modules/ngx_http_echo_module.so"
 NGINX_MODULE_HEADER="/usr/lib/nginx/modules/ngx_http_headers_more_filter_module.so"
 NGINX_MODULE_ECHO_CONF="/etc/nginx/modules-enabled/50-mod-http-echo.conf"
 NGINX_MODULE_HEADER_CONF="/etc/nginx/modules-enabled/50-mod-http-headers-more-filter.conf"
+SYSLOG="/var/log/syslog"
 
 DEFAULT_BCK_BENCH_PATH="/tmp/bck_benchmark.bm"
 OUTPUT_FILES="cmd.out response_headers.out body.out error.out extended.out benchmark.out"
