tests: Add a new backend response and new tests
Add tests about redirect and header managing

Add the GET /headers backend response that sends the request headers in the response body

Signed-off-by: Alvaro Cano <alvaro.cano@zevenet.com>

--- a/tests/functional/tpl/nginx-sites.conf
+++ b/tests/functional/tpl/nginx-sites.conf
@@ -41,6 +41,11 @@ server {
 		echo_request_body;
    }
 
+# GET: /headers
+	location /headers {
+		echo $echo_client_request_headers;
+   }
+
 # GET: /body-size/<size>/chunked
 	location ~ /body-size/([0-9]+)/chunked$ {
 		#~ more_clear_headers 'Content-Length*';  # echo sends the response chunked
