--- a/tests/functional/tests/015_redirect/zproxy.cfg
+++ b/tests/functional/tests/015_redirect/zproxy.cfg
@@ -19,16 +19,31 @@ ListenHTTP
 
 	Service "default"
 		Url "/default"
-		Redirect "http://abc.example"
+		Redirect "https://abc.example"
 	End
 
 	Service "append"
 		Url "/status/200"
-		RedirectAppend "http://#{BCK_IP_1}"
+		RedirectAppend "https://#{BCK_IP_1}/abc"
 	End
 
 	Service "dynamic"
 		Url "^/a(/[^/]*)/b(/[^/]*)"
-        RedirectDynamic "http://#{BCK_IP_1}$2$1"
+	        RedirectDynamic "https://#{BCK_IP_1}/$2$1"
+	End
+
+	Service "replace"
+		Url "/replace"
+		Redirect "https://${VHOST}/paso"
+	End
+
+	Service "replace-append"
+		Url "/append/this/url"
+		RedirectAppend "https://${VHOST}/rep"
+	End
+
+	Service "replace-dynamic"
+		Url "/rep/dyn/(\d+)/(status)"
+		RedirectDynamic "https://${VHOST}/dyn/$2/$1/end"
 	End
 End
