cmake: Put the binary version in a different file of CMakeLists
Signed-off-by: Alvaro Cano <alvaro.cano@zevenet.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -68,10 +68,12 @@ set(DH "2048" CACHE STRING "Diffie-Hellman parameters bits length")
 SET(PROJECT_DESCRIPTION "High-performance multithreaded and event-driven reverse proxy and load balancer")
 SET(PROJECT_CODENAME "${PROJECT_NAME}")
 
-SET(PROJECT_VERSION_MAJOR 0)
-SET(PROJECT_VERSION_MINOR 2)
-SET(PROJECT_VERSION_PATCH 6)
-SET(PROJECT_VERSION_TWEAK 0)
+file(READ "VERSION" PROJECT_VERSION_FILE)
+string(REGEX MATCH "([0-9]+)\.([0-9]+)\.([0-9]+)" _ ${PROJECT_VERSION_FILE})
+set(PROJECT_VERSION_MAJOR ${CMAKE_MATCH_1})
+set(PROJECT_VERSION_MINOR ${CMAKE_MATCH_2})
+set(PROJECT_VERSION_PATCH ${CMAKE_MATCH_3})
+SET(PROJECT_VERSION "${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}.${PROJECT_VERSION_PATCH}")
 
 SET(PROJECT_VENDOR_NAME "ZEVENET")
 SET(PROJECT_VENDOR_URL "https://www.zevenet.com")
@@ -80,7 +82,6 @@ execute_process(COMMAND "date" "+%Y"
 string(TIMESTAMP DATE_YEAR "%Y")
 
 SET(PROJECT_COPYRIGHT "Copyright (C) ${DATE_YEAR} ${PROJECT_VENDOR_NAME}")
-SET(PROJECT_VERSION "${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}.${PROJECT_VERSION_PATCH}-${PROJECT_VERSION_TWEAK}")
 
 SET(PROJECT_COMPILER_INFO "${CMAKE_CXX_COMPILER_ID}-${CMAKE_CXX_COMPILER_VERSION}")
 SET(PROJECT_BUILD_TYPE "${CMAKE_BUILD_TYPE}")
