tests: add tests to check custom error responses when a HTTP request is done to a HTTPS listener
Signed-off-by: Alvaro Cano <alvaro.cano@zevenet.com>

--- a/tests/functional/tests/002_https_farm/test.in
+++ b/tests/functional/tests/002_https_farm/test.in
@@ -1,3 +1,13 @@
+DESCRIPTION=http request, a custom error is expected
+CMD=curl
+CL=1
+METHOD="GET"
+URL="/"
+#########################
+CMD=reload
+FILE="zproxy_default_errnossl.cfg"
+#########################
+DESCRIPTION=http request, the default error is expected
 CMD=curl
 CL=1
 METHOD="GET"
