tests: add test to validate the location rewrite directive
Signed-off-by: Alvaro Cano <alvaro.cano@zevenet.com>

--- a/tests/functional/tpl/nginx-sites.conf
+++ b/tests/functional/tpl/nginx-sites.conf
@@ -46,6 +46,19 @@ server {
 		echo $echo_client_request_headers;
    }
 
+# GET: /resp-headers/location/ip
+	location ~ /resp-headers/location/ip$ {
+		add_header Location http://$server_addr/;
+		add_header Content-Location http://$server_addr/alt;
+		echo "Bck: #{BCK_ID}. Added the Location header in the response";
+   }
+# GET: /resp-headers/location/<value>
+	location ~ /resp-headers/location/(.*)$ {
+		add_header Location http://$1/;
+		add_header Content-Location https://$1/alt;
+		echo "Bck: #{BCK_ID}. Added the Location header in the response";
+   }
+
 # GET: /body-size/<size>/chunked
 	location ~ /body-size/([0-9]+)/chunked$ {
 		#~ more_clear_headers 'Content-Length*';  # echo sends the response chunked
