tests: add new backend response to customizate the location header and add a hosts template to use hostsnames in the tests
Signed-off-by: Alvaro Cano <alvaro.cano@zevenet.com>

--- a/tests/functional/tpl/nginx-sites.conf
+++ b/tests/functional/tpl/nginx-sites.conf
@@ -46,16 +46,25 @@ server {
 		echo $echo_client_request_headers;
    }
 
-# GET: /resp-headers/location/ip
-	location ~ /resp-headers/location/ip$ {
-		add_header Location http://$server_addr/;
-		add_header Content-Location http://$server_addr/alt;
-		echo "Bck: #{BCK_ID}. Added the Location header in the response";
+# GET: /resp-headers/location/(https?)/backend
+	location ~ /resp-headers/location/(https?)/backend$ {
+		add_header Loc-raw $1://$server_addr/;
+		add_header Location $1://$server_addr/;
+		add_header Content-Location $1://$server_addr/alt;
+		echo "Bck: #{BCK_ID}. Added the bakcned in the Location header in the response with $1 protocol";
    }
-# GET: /resp-headers/location/<value>
-	location ~ /resp-headers/location/(.*)$ {
-		add_header Location http://$1/;
-		add_header Content-Location https://$1/alt;
+# GET: /resp-headers/location/(https?)/vip
+	location ~ /resp-headers/location/(https?)/vip$ {
+		add_header Loc-raw $1://#{PROXY_VIP}/;
+		add_header Location $1://#{PROXY_VIP}/;
+		add_header Content-Location $1://#{PROXY_VIP}/alt;
+		echo "Bck: #{BCK_ID}. Added the VIP in the Location header in the response with $1 protocol";
+   }
+# GET: /resp-headers/location/(https?)/<value>
+	location ~ /resp-headers/location/(https?)/(.*)$ {
+		add_header Loc-raw $1://$2/;
+		add_header Location $1://$2/;
+		add_header Content-Location $1://$2/alt;
 		echo "Bck: #{BCK_ID}. Added the Location header in the response";
    }
 
