--- a/tests/functional/tpl/variables.ini
+++ b/tests/functional/tpl/variables.ini
@@ -42,6 +42,13 @@ DEFAULT_BCK_BENCH_PATH="/tmp/bck_benchmark.bm"
 OUTPUT_FILES="cmd.out response_headers.out body.out error.out extended.out benchmark.out"
 AVERAGE_FILES_TMP="cmd.out.tmp response_headers.out.tmp body.out.tmp error.out.tmp extended.out.tmp"
 
+# /etc/hosts
+ETC_TAG="# zproxy tests"
+ETC_FILE="/etc/hosts"
+ETC_FILE_SAVED="$TMP_DIR/hosts"
+ETC_TPL_TMP="$TMP_DIR/hosts.tmp"
+ETC_TPL="tpl/hosts"
+
 # Define the test network
 CL_SUBNET="10.1.1"
 CL_VIA_SUBNET="10.1.0"
