tests: remove error messages from stdout
Signed-off-by: Alvaro Cano <alvaro.cano@zevenet.com>

--- a/tests/functional/tests/002_https_farm/test.in
+++ b/tests/functional/tests/002_https_farm/test.in
@@ -1,4 +1,4 @@
-DESCRIPTION=http request, a custom error is expected
+DESCRIPTION="http request, a custom error is expected"
 CMD=curl
 CL=1
 METHOD="GET"
@@ -7,7 +7,7 @@ URL="/"
 CMD=reload
 FILE="zproxy_default_errnossl.cfg"
 #########################
-DESCRIPTION=http request, the default error is expected
+DESCRIPTION="http request, the default error is expected"
 CMD=curl
 CL=1
 METHOD="GET"
