tests: add test to X-Forward-For header with WAF
Added a new type of file "*.dbg" in the tests directories to simply the command
in debuging. These files are not tracked in the repository

Signed-off-by: Alvaro Cano <alvaro.cano@zevenet.com>

--- a/tests/functional/tests/009_waf/test.in
+++ b/tests/functional/tests/009_waf/test.in
@@ -36,3 +36,19 @@ CL=1
 METHOD="GET"
 URL="/deny"
 SSL=1
+########################
+DESCRIPTION="Deny by X-Forwarded-For"
+CMD=curl
+CL=1
+METHOD="GET"
+URL="/"
+SSL=1
+HEADERS="X-Forwarded-For: 10.1.1.5"
+########################
+DESCRIPTION="Do not deny by X-Forwarded-For"
+CMD=curl
+CL=1
+METHOD="GET"
+URL="/"
+SSL=1
+HEADERS="X-Forwarded-For: 5.21.8.2"
