tests: return the zproxy request headers in the backend response in order to check the X-Forwarded-For header
Signed-off-by: Alvaro Cano <alvaro.cano@zevenet.com>

--- a/tests/functional/tests/009_waf/test.in
+++ b/tests/functional/tests/009_waf/test.in
@@ -49,6 +49,6 @@ DESCRIPTION="Do not deny by X-Forwarded-For"
 CMD=curl
 CL=1
 METHOD="GET"
-URL="/"
+URL="/headers"
 SSL=1
 HEADERS="X-Forwarded-For: 5.21.8.2"
