tests: add test to check the selection of the sni certificate and replace of url and header for services
The command 'curl' has a new parameter FILTER in order to apply a grep command in the
curl -v output

Signed-off-by: Alvaro Cano <alvaro.cano@zevenet.com>

--- a/tests/functional/tests/002_https_farm/zproxy_default_errnossl.cfg
+++ b/tests/functional/tests/002_https_farm/zproxy_default_errnossl.cfg
@@ -19,7 +19,7 @@ ListenHTTPS
 	xHTTP 4
 	RewriteLocation 1
 
-	Cert "#{TEST_TPL}/zencert.pem"
+	Cert "#{TEST_TPL}/all.pem"
 	Ciphers "ALL"
 	Disable SSLv3
 	SSLHonorCipherOrder 1
