--- a/tests/functional/tests/009_waf/zproxy_def_err.cfg
+++ b/tests/functional/tests/009_waf/zproxy_def_err.cfg
@@ -21,7 +21,7 @@ ListenHTTPS
 
 	WafRules "#{TEST_TPL}/waf.rules"
 
-	Cert "#{TEST_TPL}/zencert.pem"
+	Cert "#{TEST_TPL}/all.pem"
 	Ciphers "ALL"
 	Disable SSLv3
 	SSLHonorCipherOrder 1
