--- a/tests/functional/tpl/nginx-sites.conf
+++ b/tests/functional/tpl/nginx-sites.conf
@@ -5,8 +5,8 @@ server {
 	listen 443 ssl http2;
 	listen [::]:443 ssl http2;
 
-	ssl_certificate     #{TEST_TPL}/zencert.pem;
-	ssl_certificate_key #{TEST_TPL}/zencert-c.key;
+	ssl_certificate     #{TEST_TPL}/nginx.pem;
+	ssl_certificate_key #{TEST_TPL}/nginx.key;
 
 	root #{HTTP_WEBROOT};
 
@@ -14,7 +14,10 @@ server {
 	# index index.html index.htm;
 
 	server_name bck-#{BCK_ID};
+
+# This has to be applied in all locations that add more add_header directives
 	add_header Backend $server_name;
+
 	more_clear_headers 'Date:*';
 	more_clear_headers 'ETag:*';
 	more_clear_headers 'Last-Modified:*';
@@ -22,6 +25,15 @@ server {
 
 # GET, POST: /
 	location / {
+
+		add_header Backend $server_name;
+		add_header Request-Uri $uri;
+
+		# original location to check if it was changed
+		add_header Loc-raw http://$server_addr$uri;
+		add_header Location http://$server_addr$uri;
+		add_header Content-Location http://$server_addr$uri/app;
+
 		echo "Default response of the backend #{BCK_ID}";
 	}
 
@@ -48,6 +60,7 @@ server {
 
 # GET: /resp-headers/location/(https?)/backend
 	location ~ /resp-headers/location/(https?)/backend$ {
+		add_header Backend $server_name;
 		add_header Loc-raw $1://$server_addr/;
 		add_header Location $1://$server_addr/;
 		add_header Content-Location $1://$server_addr/alt;
@@ -55,6 +68,7 @@ server {
    }
 # GET: /resp-headers/location/(https?)/vip
 	location ~ /resp-headers/location/(https?)/vip$ {
+		add_header Backend $server_name;
 		add_header Loc-raw $1://#{PROXY_VIP}/;
 		add_header Location $1://#{PROXY_VIP}/;
 		add_header Content-Location $1://#{PROXY_VIP}/alt;
@@ -62,6 +76,7 @@ server {
    }
 # GET: /resp-headers/location/(https?)/<value>
 	location ~ /resp-headers/location/(https?)/(.*)$ {
+		add_header Backend $server_name;
 		add_header Loc-raw $1://$2/;
 		add_header Location $1://$2/;
 		add_header Content-Location $1://$2/alt;
@@ -76,8 +91,8 @@ server {
 
 # GET: /sleep-response/<seconds>
 	location ~ /sleep-response/([0-9]+)$ {
-     echo_sleep   $1;
-     echo body;
+		echo_sleep   $1;
+		echo body;
    }
 
 # GET: /sleep-body/<seconds>
