--- a/tests/functional/tpl/variables.ini
+++ b/tests/functional/tpl/variables.ini
@@ -58,6 +58,7 @@ PROXY_VIP="10.1.2.1"
 
 # Proxy global configuration
 PROXY_VPORT="80"
+PROXY_VPORT_SSL="443"
 PROXY_IF="VIP"
 PROXY_GRACETIME=1
 PROXY_NS="proxy-ns"
