--- a/tests/functional/tests/002_https_farm/zproxy.cfg
+++ b/tests/functional/tests/002_https_farm/zproxy.cfg
@@ -21,7 +21,7 @@ ListenHTTPS
 
 	ErrNoSsl 505 "#{TEST_TPL}/nossl_err.html"
 
-	Cert "#{TEST_TPL}/zencert.pem"
+	Cert "#{TEST_TPL}/all.pem"
 	Ciphers "ALL"
 	Disable SSLv3
 	SSLHonorCipherOrder 1
