--- a/tests/functional/tests/009_waf/zproxy.cfg
+++ b/tests/functional/tests/009_waf/zproxy.cfg
@@ -19,7 +19,7 @@ ListenHTTPS
 	xHTTP 4
 	RewriteLocation 1
 
-	Cert "#{TEST_TPL}/zencert.pem"
+	Cert "#{TEST_TPL}/all.pem"
 	Ciphers "ALL"
 	Disable SSLv3
 	SSLHonorCipherOrder 1
