--- a/tests/functional/tests/009_waf/zproxy_waf.cfg
+++ b/tests/functional/tests/009_waf/zproxy_waf.cfg
@@ -22,7 +22,7 @@ ListenHTTPS
 	WafRules "#{TEST_TPL}/waf.rules"
 	ErrWaf "#{TEST_TPL}/waf_err.html"
 
-	Cert "#{TEST_TPL}/zencert.pem"
+	Cert "#{TEST_TPL}/all.pem"
 	Ciphers "ALL"
 	Disable SSLv3
 	SSLHonorCipherOrder 1
