--- a/tests/functional/tests/014_http_headers/zproxy.cfg
+++ b/tests/functional/tests/014_http_headers/zproxy.cfg
@@ -28,6 +28,24 @@ ListenHTTP
 	ReplaceHeader  Response   "^Backen"         "(bck)-(\d)"	"undefined-$2-$1"
 
 	Service "default"
+		Url "/sv1"
+		RewriteUrl "^/sv1/" "/"
+
+		#~ HeadRemove	"agent"
+		#~ AddHeader	"Cookie: asdfgh"
+		ReplaceHeader  Request    "Host"         "(.*)"		"from-svc-ip_src:$1"
+
+		#~ RemoveResponseHead	"^Server:"
+		#~ AddResponseHeader	"Custom-header: added by zproxy"
+		ReplaceHeader  Response   "^Backen"         "(bck)-(\d)"	"from-svc-$2-$1"
+
+		BackEnd
+			Address #{BCK_IP_1}
+			Port 80
+		End
+	End
+
+	Service "default"
 		BackEnd
 			Address #{BCK_IP_1}
 			Port 80
