tests: add tests for SNI certificates and update tests
Signed-off-by: Alvaro Cano <alvaro.cano@zevenet.com>

--- a/tests/functional/tests/019_sni_certs/test.in
+++ b/tests/functional/tests/019_sni_certs/test.in
@@ -21,6 +21,15 @@ CMD=curl
 CL=1
 SSL=1
 FILTER="OU="
+VHOST="zproxy"
+METHOD="GET"
+URL="/"
+##################################
+DESCRIPTION="get the default certificate"
+CMD=curl
+CL=1
+SSL=1
+FILTER="OU="
 VHOST="subzone.test.zproxy"
 METHOD="GET"
 URL="/"
