--- a/tests/functional/tpl/variables.ini
+++ b/tests/functional/tpl/variables.ini
@@ -39,7 +39,7 @@ NGINX_MODULE_HEADER_CONF="/etc/nginx/modules-enabled/50-mod-http-headers-more-fi
 SYSLOG="/var/log/syslog"
 
 DEFAULT_BCK_BENCH_PATH="/tmp/bck_benchmark.bm"
-OUTPUT_FILES="cmd.out response_headers.out body.out error.out extended.out benchmark.out"
+OUTPUT_FILES="cmd.out response_headers.out body.out error.out extended.out benchmark.out filter.out"
 AVERAGE_FILES_TMP="cmd.out.tmp response_headers.out.tmp body.out.tmp error.out.tmp extended.out.tmp"
 
 # /etc/hosts
