tests: Add test to remove/add header by service
Signed-off-by: Alvaro Cano <alvaro.cano@zevenet.com>

--- a/tests/functional/tests/014_http_headers/test.in
+++ b/tests/functional/tests/014_http_headers/test.in
@@ -3,9 +3,10 @@ CL=1
 METHOD="GET"
 URL="/headers"
 VHOST=
+HEADERS="head-1: client-header"
 ##############################
 CMD=curl
 CL=1
 METHOD="GET"
 URL="/sv1/headers"
-VHOST=
+HEADERS="head-1: client-header"
