code: enable warnings and remove some of them
Signed-off-by: Alvaro Cano <alvaro.cano@zevenet.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -129,7 +129,10 @@ if (UNIQUE_BUILD_DIRECTORY)
 endif ()
 
 set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O3 ")
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -m64 -std=c++1z  -Wshadow -pipe -pthread")
+# More strict
+# set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -m64 -std=c++1z -Wall -Wshadow -pipe -pthread")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -m64 -std=c++1z -Wall -Wno-unused-function -Wshadow -pipe -pthread")
+
 #uncomment to show relative source file path
 #set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -D__FILENAME__='\"$(subst  ${CMAKE_SOURCE_DIR}/,,$(abspath \$<))\"'")
 
