code: remove several warnings
Signed-off-by: Alvaro Cano <alvaro.cano@zevenet.com>

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -73,6 +73,7 @@ set(l7core_sources ${l7core_sources}
     service/http_session_manager.h service/http_session_manager.cpp
     service/service.h service/service.cpp
     service/service_manager.h service/service_manager.cpp
+    config/macro.cpp
     config/macro.h
     config/config_node.h
     config/config_data.h
