tests: add option to stop the test when it fails
Signed-off-by: Alvaro Cano <alvaro.cano@zevenet.com>

--- a/tests/functional/tpl/variables.ini
+++ b/tests/functional/tpl/variables.ini
@@ -13,6 +13,7 @@ ZPROXY_KEEP_RUNNING=0
 FUNCTIONAL_FLAG=1
 BENCHMARK_FLAG=0
 DEBUG_FLAG=0
+ERROR_FLAG=0
 
 # Colors for test output
 COLOR_NON="\033[0m"
