tests: add test to backend that responds an HTTP code 200 when 100 continue is expected
Signed-off-by: Alvaro Cano <alvaro.cano@zevenet.com>

--- a/tests/functional/tests/026_multi_request_connection/test.in
+++ b/tests/functional/tests/026_multi_request_connection/test.in
@@ -1,4 +1,4 @@
-DESCRIPTION="Send two GETs in the same connection"
+DESCRIPTION="Send two GETs in the same connection, the first with body"
 CMD=curl
 SSL=1
 CL=1
@@ -8,3 +8,25 @@ URL="/echo"
 HEADERS="Content-Type: text/xml"
 NEXT_METHOD="GET"
 NEXT_URL="/"
+#########################
+DESCRIPTION="Send a POST and next a GET in the same connection"
+CMD=curl
+SSL=1
+CL=1
+METHOD="POST"
+BODY="file.txt"
+URL="/url1"
+HEADERS="Content-Type: text/xml"
+NEXT_METHOD="GET"
+NEXT_URL="/url2"
+#########################
+DESCRIPTION="Send a POST and next a GET with body request in the same connection"
+CMD=curl
+SSL=1
+CL=1
+METHOD="GET"
+BODY="file.txt"
+URL="/url1"
+HEADERS="Content-Type: text/xml"
+NEXT_METHOD="GET"
+NEXT_URL="/url2"
