tests: add tests for waf with chunk requests/responses
Signed-off-by: Alvaro Cano <alvaro.cano@zevenet.com>

--- a/tests/functional/tpl/nginx-sites.conf
+++ b/tests/functional/tpl/nginx-sites.conf
@@ -92,7 +92,7 @@ server {
 # GET: /sleep-response/<seconds>
 	location ~ /sleep-response/([0-9]+)$ {
 		echo_sleep   $1;
-		echo body;
+		echo body_finish;
    }
 
 # GET: /sleep-body/<seconds>
@@ -100,7 +100,7 @@ server {
      echo body part 1;
      echo_flush;  # ensure the client can see previous output immediately
      echo_sleep   $1;
-     echo body part 2;
+     echo body body_finish;
    }
 
 # GET, POST, PUT, DELETE: /status/<code>
