tests: Unset LC_ALL locale variable to avoid issue sorting the response headers
Signed-off-by: Alvaro Cano <alvaro.cano@zevenet.com>

--- a/tests/functional/tpl/variables.ini
+++ b/tests/functional/tpl/variables.ini
@@ -3,6 +3,9 @@
 TMP_DIR="/tmp/functional-tests"
 mkdir -p $TMP_DIR 2>/dev/null
 
+# It is needed for 'sort' command
+LC_ALL=""
+
 # Value 1: it shows the executed system commands
 # Value 2: it shows the output of the system commands
 DEBUG=0
