tests: do not omit the new line character in body requests
Signed-off-by: Alvaro Cano <alvaro.cano@zevenet.com>

--- a/tests/functional/tests/001_http_farm/test.in
+++ b/tests/functional/tests/001_http_farm/test.in
@@ -24,6 +24,13 @@ METHOD=POST
 URL=/echo
 FILE=file.txt
 #########################
+DESCRIPTION="Upload a file"
+CMD=curl
+CL=1
+METHOD=POST
+URL=/echo
+BODY=file.txt
+#########################
 DESCRIPTION="Download a file"
 CMD=curl
 CL=1
