tests: add test for response set-cookie header
Signed-off-by: Alvaro Cano <alvaro.cano@zevenet.com>

--- a/tests/functional/tpl/nginx-sites.conf
+++ b/tests/functional/tpl/nginx-sites.conf
@@ -103,6 +103,11 @@ server {
      echo body body_finish;
    }
 
+	location ~ /resp-headers/set-cookie/(.*)$ {
+    	add_header Set-Cookie $1;
+	    echo "Added set-cookie";
+   }
+
 # GET, POST, PUT, DELETE: /status/<code>
 	location /status/200 {
 	    echo_status 200;
