tests: add test to check a https backend
Signed-off-by: Alvaro Cano <alvaro.cano@zevenet.com>

--- a/tests/functional/tests/006_https_bck/test.in
+++ b/tests/functional/tests/006_https_bck/test.in
@@ -1,12 +1,17 @@
 CMD=curl
 CL=1
 METHOD="GET"
+URL="/bck-non-https"
+#########################
+CMD=curl
+CL=1
+METHOD="GET"
 URL="/bck-https"
 #########################
 CMD=curl
 CL=1
 METHOD="GET"
-URL="/bck-non-https"
+URL="/bck-bad-configured"
 #########################
 DESCRIPTION="Get stats to check counters"
 CMD=ctl
