--- a/tests/functional/tests/006_https_bck/zproxy.cfg
+++ b/tests/functional/tests/006_https_bck/zproxy.cfg
@@ -17,8 +17,26 @@ ListenHTTP
 	xHTTP 4
 	RewriteLocation 1
 
-	Service "virtualhost"
+	Service "http"
+		Url "/bck-non-https"
+		BackEnd
+			Address #{BCK_IP_2}
+			Port 80
+		End
+	End
+
+	Service "https"
 		Url "/bck-https"
+		StrictTransportSecurity 21600000
+		BackEnd
+			HTTPS
+			Address #{BCK_IP_1}
+			Port 443
+		End
+	End
+
+	Service "badconfig"
+		Url "/bck-bad-configured"
 		StrictTransportSecurity 21600000
 		BackEnd
 			Address #{BCK_IP_1}
@@ -26,11 +44,4 @@ ListenHTTP
 		End
 	End
 
-	Service "url"
-		Url "/bck-non-https"
-		BackEnd
-			Address #{BCK_IP_2}
-			Port 80
-		End
-	End
 End
