tests: fix the 031 test regarding upload big files with 100 continue and chunk encoding
Signed-off-by: Alvaro Cano <alvaro.cano@zevenet.com>

--- a/tests/functional/tests/031_upload_files_chunk/zproxy.cfg
+++ b/tests/functional/tests/031_upload_files_chunk/zproxy.cfg
@@ -11,6 +11,8 @@ Client		30
 ThreadModel	dynamic
 Control		"#{PROXY_CTL_SOCKET}"
 
+Ignore100continue 0
+
 ListenHTTP
 	Address 0.0.0.0
 	Port #{PROXY_VPORT}
