tests: add big files request test
Signed-off-by: nevola <laura.garcia@zevenet.com>

--- a/tests/functional/tpl/nginx-sites.conf
+++ b/tests/functional/tpl/nginx-sites.conf
@@ -39,7 +39,7 @@ server {
 
 # GET: /download
 	location ~ /download/ {
-		try_files $uri $uri/ /index.php$is_args$args;
+#		try_files $uri $uri/ /index.php$is_args$args;
 	}
 
 # GET: /client-ip
