tests: Phase out RedirectAppend & RedirectDynamic from tests
Signed-off-by: Nicolás A. Ortega Froysa <nicolas.ortega@zevenet.com>

--- a/tests/functional/tests/redirect/zproxy.cfg
+++ b/tests/functional/tests/redirect/zproxy.cfg
@@ -22,13 +22,13 @@ ListenHTTP
 	End
 
 	Service "append"
-		Url "/status/200"
-		RedirectAppend "https://#{BCK_IP_1}/abc"
+		Url "(/status/200)"
+		Redirect "https://#{BCK_IP_1}/abc$1"
 	End
 
 	Service "dynamic"
 		Url "^/a(/[^/]*)/b(/[^/]*)"
-	        RedirectDynamic "https://#{BCK_IP_1}/$2$1"
+	        Redirect "https://#{BCK_IP_1}/$2$1"
 	End
 
 	Service "replace"
@@ -37,12 +37,12 @@ ListenHTTP
 	End
 
 	Service "replace-append"
-		Url "/append/this/url"
-		RedirectAppend "https://${VHOST}/rep"
+		Url "(/append/this/url)"
+		Redirect "https://${VHOST}/rep$1"
 	End
 
 	Service "replace-dynamic"
 		Url "/rep/dyn/(\d+)/(status)"
-		RedirectDynamic "https://${VHOST}/dyn/$2/$1/end"
+		Redirect "https://${VHOST}/dyn/$2/$1/end"
 	End
 End
