--- a/tests/functional/tests/rewrite_url_and_rewrite_location/zproxy.cfg
+++ b/tests/functional/tests/rewrite_url_and_rewrite_location/zproxy.cfg
@@ -17,8 +17,8 @@ ListenHTTP
 	RewriteLocation 1 0
 
 	Service "vhost1"
-		Url "/vhost1"
-		RedirectAppend 301 "https://${VHOST}"
+		Url "(/vhost1)(/.*)"
+		Redirect 301 "https://${VHOST}$1$2"
 	End
 
 	Service "svc1"
