config: Reimplement RedirectAppend
Signed-off-by: Nicolás A. Ortega Froysa <nicolas.ortega@zevenet.com>

--- a/tests/functional/tests/redirect/zproxy.cfg
+++ b/tests/functional/tests/redirect/zproxy.cfg
@@ -22,8 +22,8 @@ ListenHTTP
 	End
 
 	Service "append"
-		Url "(/status/200)"
-		Redirect "https://#{BCK_IP_1}/abc$1"
+		Url "/status/200"
+		RedirectAppend "https://#{BCK_IP_1}/abc"
 	End
 
 	Service "dynamic"
@@ -37,8 +37,8 @@ ListenHTTP
 	End
 
 	Service "replace-append"
-		Url "(/append/this/url)"
-		Redirect "https://${VHOST}/rep$1"
+	Url "/append/this/url"
+	RedirectAppend "https://${VHOST}/rep"
 	End
 
 	Service "replace-dynamic"
