--- a/tests/functional/tests/websocket/zproxy_ssl.cfg
+++ b/tests/functional/tests/websocket/zproxy_ssl.cfg
@@ -8,13 +8,20 @@ ConnTO		6
 Alive		10
 Client		30
 ThreadModel	dynamic
+DHParams 	"#{TEST_TPL}/dh2048.pem"
+ECDHCurve 	"prime256v1"
 
-ListenHTTP
+ListenHTTPS
 	Name env
 	Address 0.0.0.0
-	Port #{PROXY_VPORT}
+	Port #{PROXY_VPORT_SSL}
 	xHTTP 4
 	RewriteLocation 1
+
+	Cert "#{TEST_TPL}/all.pem"
+	Ciphers "ALL"
+	Disable SSLv3
+	SSLHonorCipherOrder 1
 
 	Service "default"
 		BackEnd
