tests: add https protocol tests
Enable openssl checks to test TLS disable options.

Signed-off-by: nevola <laura.garcia@zevenet.com>

--- a/tests/functional/tpl/variables.ini
+++ b/tests/functional/tpl/variables.ini
@@ -34,6 +34,7 @@ PROXY_CTL_SOCKET="$TMP_DIR/env_proxy.socket"
 PROXY_SOCKET_IP="localhost"
 WRK_BIN="/usr/bin/wrk"
 CURL_BIN="/usr/bin/curl"
+OPENSSL_BIN="/usr/bin/openssl"
 HTTPD_BIN="/usr/sbin/nginx"
 ZPROXY_TPL="tpl/init_zproxy.cfg"
 HTTP_TPL="tpl/nginx.conf"
