ctl: add session synchronization API call
This API call helps to simplify the task of the ssyncd program in synchronizing
the sessions between a master & slave Zproxy instance.

Signed-off-by: Nicolás A. Ortega Froysa <nicolas.ortega@zevenet.com>

--- a/tests/functional/tests/ctl_responses/test.in
+++ b/tests/functional/tests/ctl_responses/test.in
@@ -47,3 +47,8 @@ DESCRIPTION="Get invalid backend"
 CMD=ctl
 URL="/listener/0/service/default/backend/0.0.0.0-9999"
 METHOD="GET"
+#########################
+DESCRIPTION="Get service sessions"
+CMD=ctl
+URL="/listener/0/service/default/sessions"
+METHOD="GET"
