service: merge service code
Simplifying the code by merging the two service source/header files.

Signed-off-by: Nicolás A. Ortega Froysa <nicolas.ortega@zevenet.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -73,12 +73,11 @@ set(sources_h
 	"include/ctl.h"
 	"include/djb_hash.h"
 	"include/proxy.h"
-	"include/services.h"
+	"include/service.h"
 	"include/socket.h"
 	"include/ssl.h"
 	"include/worker.h"
 	"include/monitor.h"
-	"include/service.h"
 	"include/session.h"
 	"include/state.h"
 	"include/http.h"
@@ -102,8 +101,7 @@ set(sources_c
 	"src/monitor.c"
 	"src/socket.c"
 	"src/ssl.c"
-	"src/services.c"
-	"src/service.cpp"
+	"src/service.c"
 	"src/session.c"
 	"src/state.cpp"
 	"src/json.cpp"
