session: rewrite session set to hash table
Sessions are rewritten from C++ Sets to C hash tables.

Every service has it's own mutex protected hash table of sessions
with 512 buckets by default.

Signed-off-by: nevola <laura.garcia@zevenet.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -104,7 +104,7 @@ set(sources_c
 	"src/ssl.c"
 	"src/services.c"
 	"src/service.cpp"
-	"src/session.cpp"
+	"src/session.c"
 	"src/state.cpp"
 	"src/json.cpp"
 	"src/http.c"
