test: ensure usage of correct backend
This test would fail randomly when a different backend was selected. Now it will
always choose the first backend.

Signed-off-by: Nicolás A. Ortega Froysa <nicolas.ortega@zevenet.com>

--- a/tests/functional/tests/stress_sess_ip_reload/zproxy.cfg
+++ b/tests/functional/tests/stress_sess_ip_reload/zproxy.cfg
@@ -24,10 +24,12 @@ ListenHTTP
 		BackEnd
 			Address #{BCK_IP_1}
 			Port 80
+			Weight 5
 		End
 		BackEnd
 			Address #{BCK_IP_2}
 			Port 80
+			Weight 1
 		End
 	End
 End
