--- a/tests/functional/tests/multi_listener/test.in
+++ b/tests/functional/tests/multi_listener/test.in
@@ -10,3 +10,8 @@ CL=1
 METHOD="GET"
 URL="/"
 SSL=1
+#########################
+DESCRIPTION="List listeners"
+CMD=ctl
+URL="/listeners"
+METHOD="GET"
