tests: normalize stress_sess_ip_reload
The test was somewhat unpredictable due to the configuration of zproxy_new.cfg.
This should make the test a little more predictable, and therefore not give a
false negative (falsely failing the test).

Signed-off-by: Nicolás A. Ortega Froysa <nicolas.ortega@zevenet.com>

--- a/tests/functional/tests/stress_sess_ip_reload/test.in
+++ b/tests/functional/tests/stress_sess_ip_reload/test.in
@@ -13,7 +13,7 @@ TIMEOUT=2
 #########################
 DESCRIPTION="Reload the configuration file"
 CMD=reload
-FILE=zproxy_new.cfg
+FILE=zproxy.cfg
 #########################
 DESCRIPTION="Wait for some requests to be sent"
 CMD=wait
