tests: add CTL stats call to stress_sess_ip_reload
This should help for debugging some of the oddities in this test.

Signed-off-by: Nicolás A. Ortega Froysa <nicolas.ortega@zevenet.com>

--- a/tests/functional/tests/stress_sess_ip_reload/test.in
+++ b/tests/functional/tests/stress_sess_ip_reload/test.in
@@ -19,5 +19,10 @@ DESCRIPTION="Wait for some requests to be sent"
 CMD=wait
 TIMEOUT=2
 #########################
+DESCRIPTION="Check stats for sessions"
+CMD=ctl
+METHOD="GET"
+URL=/listener/0
+#########################
 DESCRIPTION="Kill the wrk process"
 CMD=killwrk
